--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,6 +14,5 @@
 <body>
     <img src="pics/message.png" alt="message" class="message" draggable="false">
 </body>
-
 
 </html>
