--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <img src="pics/message.png" alt="message" class="message" draggable="false">
+    <footer><span>made with ❤ by <a href="https://github.com/lucaspontoexe" target="_blank">lucas</a>, for veela and all fans out there</span></footer>
 </body>
 
 </html>
