--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 
 <body>
     <img src="message.png" alt="message" class="message" draggable="false">
-    <footer><span>made with ❤ by <a href="https://github.com/lucaspontoexe" target="_blank">lucas</a>, for veela and all fans out there</span></footer>
+    <footer>
+        <span>made with ❤ by
+            <a href="https://github.com/lucaspontoexe" target="_blank">lucas</a>,
+            for 
+            <a href="https://youtube.com/veelamusic" target="_blank">veela</a> 
+            and
+            <a href="https://discord.gg/veela" target="_blank">all of her fans</a>
+        </span>
+    </footer>
 </body>
 
 </html>
