--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img src="message.png" alt="message" class="message" draggable="false">
+    <img src="message.png" alt="@Bonele$$: Damn can you made me a website that just pictures of Linus everywhere you click" class="message" draggable="false">
     <footer>
         <span>made with ❤ by
             <a href="https://github.com/lucaspontoexe" target="_blank">lucas</a>,
