Make "lucas" link point to this repository

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         draggable="false">
     <footer>
         <span>made with ❤ by
-            <a href="https://github.com/lucaspontoexe" target="_blank">lucas</a>,
+            <a href="https://github.com/lucaspontoexe/linushub" target="_blank">lucas</a>,
             for
             <a href="https://youtube.com/veelamusic" target="_blank">veela</a>
             and
