--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>LinusHub</title>
+    <title>Rest in peace, Linus</title>
 
     <link rel="manifest" href="manifest.json">
 
@@ -14,8 +14,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="LinusHub">
     <meta name="apple-mobile-web-app-title" content="LinusHub">
-    <meta name="theme-color" content="#181818">
-    <meta name="msapplication-navbutton-color" content="#181818">
+    <meta name="theme-color" content="#000000">
+    <meta name="msapplication-navbutton-color" content="#000000">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="msapplication-starturl" content="/">
 
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <img src="message.png"
+    <!-- <img src="message.png"
         alt="@Bonele$$: Damn can you made me a website that just pictures of Linus everywhere you click" class="message"
         draggable="false">
     <footer>
@@ -46,7 +46,13 @@
             and
             <a href="https://discord.gg/veela" target="_blank">all of her fans</a>
         </span>
-    </footer>
+    </footer> -->
+
+    <h1>
+        An angel went back to heaven.
+        <br>
+        We will miss you.
+    </h1>
 </body>
 
 </html>
