bring message back

--- a/index.html
+++ b/index.html
@@ -1,58 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Rest in peace, Linus</title>
 
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" />
 
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="LinusHub">
-    <meta name="apple-mobile-web-app-title" content="LinusHub">
-    <meta name="theme-color" content="#000000">
-    <meta name="msapplication-navbutton-color" content="#000000">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="msapplication-starturl" content="/">
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="LinusHub" />
+    <meta name="apple-mobile-web-app-title" content="LinusHub" />
+    <meta name="theme-color" content="#181818" />
+    <meta name="msapplication-navbutton-color" content="#181818" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="msapplication-starturl" content="/" />
 
-    <link rel="icon" sizes="128x128" href="icons/icon128.png">
-    <link rel="apple-touch-icon" sizes="128x128" href="icons/icon128.png">
-    <link rel="icon" sizes="192x192" href="icons/icon192.png">
-    <link rel="apple-touch-icon" sizes="192x192" href="icons/icon192.png">
-    <link rel="icon" sizes="256x256" href="icons/icon256.png">
-    <link rel="apple-touch-icon" sizes="256x256" href="icons/icon256.png">
-    <link rel="icon" sizes="512x512" href="icons/icon512.png">
-    <link rel="apple-touch-icon" sizes="512x512" href="icons/icon512.png">
-    <link rel="icon" sizes="720x720" href="icons/icon720.png">
-    <link rel="apple-touch-icon" sizes="720x720" href="icons/icon720.png">    
+    <link rel="icon" sizes="128x128" href="icons/icon128.png" />
+    <link rel="apple-touch-icon" sizes="128x128" href="icons/icon128.png" />
+    <link rel="icon" sizes="192x192" href="icons/icon192.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="icons/icon192.png" />
+    <link rel="icon" sizes="256x256" href="icons/icon256.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="icons/icon256.png" />
+    <link rel="icon" sizes="512x512" href="icons/icon512.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="icons/icon512.png" />
+    <link rel="icon" sizes="720x720" href="icons/icon720.png" />
+    <link rel="apple-touch-icon" sizes="720x720" href="icons/icon720.png" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
-</head>
+  </head>
 
-<body>
-    <!-- <img src="message.png"
-        alt="@Bonele$$: Damn can you made me a website that just pictures of Linus everywhere you click" class="message"
-        draggable="false">
+  <body>
+    <img
+      src="message.png"
+      alt="@Bonele$$: Damn can you made me a website that just pictures of Linus everywhere you click"
+      class="message"
+      draggable="false"
+    />
     <footer>
-        <span>made with ❤ by
-            <a href="https://github.com/lucaspontoexe/linushub" target="_blank">lucas</a>,
-            for
-            <a href="https://youtube.com/veelamusic" target="_blank">veela</a>
-            and
-            <a href="https://discord.gg/veela" target="_blank">all of her fans</a>
-        </span>
-    </footer> -->
-
-    <h1>
-        An angel went back to heaven.
-        <br>
-        We will miss you.
-    </h1>
-</body>
-
+      <span>Rest in peace, Linus, we will miss you. </span>
+    </footer>
+  </body>
 </html>
