change footer text and title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Rest in peace, Linus</title>
+    <title>LinusHub</title>
 
     <link rel="manifest" href="manifest.json" />
 
@@ -47,7 +47,7 @@
       draggable="false"
     />
     <footer>
-      <span>Rest in peace, Linus, we will miss you. </span>
+      <span>Rest in peace, Linus, you will be missed. </span>
     </footer>
   </body>
 </html>
